package saboteadores.mazo.cartas;
public class Carta {
	
}
