package saboteadores.modelo.enums;

public enum CartaAccionTipo{
	PICO, ANTORCHA, MINECART,  VACIO
}
