package saboteadores.modelo.enums;
public enum Rol{
	IMPOSTOR, ENANO
}
